--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Risk_Calculator</title>
+<title>Healthy_Lifestyle_Calculator</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">  
 <link href="https://fonts.googleapis.com/css?family=Raleway|Ubuntu" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="style.css"> 
